--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<h3>Gardens Grow</h3>
 		<li><a href="https://github.com/GameDevStudioUCSD/GardensGrow">Source</a></li>
 		<li><a href="https://github.com/GameDevStudioUCSD/GardensGrow/releases/download/v1.0-beta-windows/GardensGrow.zip">Windows</a></li>
-		<li><a href="https://github.com/GameDevStudioUCSD/GardensGrow/releases/download/v1.0-beta-mac/GardensGrow.tar">Mac OSX</a>></li>
+		<li><a href="https://github.com/GameDevStudioUCSD/GardensGrow/releases/download/v1.0-beta-mac/GardensGrow.tar">Mac OSX</a></li>
 	</div>
 
 </body>
