added css/updated index with more content

--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>GDS Download Hub</title>
+    <title>GDS Download Hub</title>
+    <meta charset="utf-8">
+    <meta content="ie=edge" http-equiv="x-ua-compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>A Simple System</title>
+    <link href="css/foundation.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-
-	<div>
-		<h3>Gardens Grow</h3>
-		<li><a href="https://github.com/GameDevStudioUCSD/GardensGrow">Source</a></li>
-		<li><a href="https://github.com/GameDevStudioUCSD/GardensGrow/releases/download/v1.0-beta-windows/GardensGrow.zip">Windows</a></li>
-		<li><a href="https://github.com/GameDevStudioUCSD/GardensGrow/releases/download/v1.0-beta-mac/GardensGrow.tar">Mac OSX</a></li>
-	</div>
-
+    <div class="row">
+        <h1>GDS Download Hub</h1>
+        <div class="large-12 columns">
+            <div class="callout">
+                <h3>Gardens Grow</h3>
+                <p>The Game Dev Studio's 2016-2017 Game!</p>
+                <div class="row">
+                    <div class="large-3 columns"><img src="img/poster_sketch.jpg"></div>
+                    <div class="large-6 columns">
+                        <iframe allowfullscreen frameborder="0" height="315" src="https://www.youtube.com/embed/6CyKGFDkVQE" width="560"></iframe>
+                    </div>
+                    <div class="large-3 columns">
+                        <h4>Source Links</h4>
+                        <ul>
+                            <li>
+                                <a href="https://github.com/GameDevStudioUCSD/GardensGrow">Source</a>
+                            </li>
+                            <li>
+                                <a href="http://gamedevstudio.org/gardens_grow_docs/annotated.html">Documentation</a>
+                            </li>
+                        </ul>
+                        <h4>Download Links</h4>
+                        <ul>
+                            <li>
+                                <a href="https://github.com/GameDevStudioUCSD/GardensGrow/releases/download/v1.0-beta-windows/GardensGrow.zip">Windows</a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/GameDevStudioUCSD/GardensGrow/releases/download/v1.0-beta-mac/GardensGrow.tar">Mac OSX</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
