--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="row">
                     <div class="large-3 columns"><img src="img/poster_sketch.jpg"></div>
                     <div class="large-6 columns">
-                        <iframe allowfullscreen frameborder="0" height="315" src="https://www.youtube.com/embed/6CyKGFDkVQE" width="560"></iframe>
+                        <iframe allowfullscreen frameborder="0" height="315" src="https://www.youtube.com/embed/6CyKGFDkVQE" width="100%"></iframe>
                     </div>
                     <div class="large-3 columns">
                         <h4>Source Links</h4>
